--- a/src/index.scss
+++ b/src/index.scss
@@ -117,7 +117,7 @@ input {
   width: 100%;
   height: 100%;
   z-index: 1000;
-  transition: all 0.5s ease-in-out;
+  transition: all 0.5s ease;
 }
 
 html {
